Urls conectadas en compare

--- a/source/countries/templates/countries/b_currency.html
+++ b/source/countries/templates/countries/b_currency.html
@@ -112,6 +112,168 @@
                 </button>
             </form>
         </div>
+        <select id="currency-select" name="country_currency" style="width: 100%; padding: 10px; font-size: 1.1em;">
+            <option value="" selected disabled>Pulse para ver todas las divisas (debe escribirla arriba)</option>
+            <option value="Albanian lek">Albanian lek</option>
+            <option value="Algerian dinar">Algerian dinar</option>
+            <option value="Angolan kwanza">Angolan kwanza</option>
+            <option value="Argentine peso">Argentine peso</option>
+            <option value="Armenian dram">Armenian dram</option>
+            <option value="Aruban florin">Aruban florin</option>
+            <option value="Australian dollar">Australian dollar</option>
+            <option value="Azerbaijani manat">Azerbaijani manat</option>
+            <option value="Bahamian dollar">Bahamian dollar</option>
+            <option value="Bahraini dinar">Bahraini dinar</option>
+            <option value="Bangladeshi taka">Bangladeshi taka</option>
+            <option value="Barbadian dollar">Barbadian dollar</option>
+            <option value="Belarusian ruble">Belarusian ruble</option>
+            <option value="Belize dollar">Belize dollar</option>
+            <option value="Bermudian dollar">Bermudian dollar</option>
+            <option value="Bhutanese ngultrum">Bhutanese ngultrum</option>
+            <option value="Bolivian boliviano">Bolivian boliviano</option>
+            <option value="Bosnian convertible mark">Bosnian convertible mark</option>
+            <option value="Botswana pula">Botswana pula</option>
+            <option value="Brazilian real">Brazilian real</option>
+            <option value="British pound">British pound</option>
+            <option value="Brunei dollar">Brunei dollar</option>
+            <option value="Bulgarian lev">Bulgarian lev</option>
+            <option value="Burundian franc">Burundian franc</option>
+            <option value="Cape Verdean escudo">Cape Verdean escudo</option>
+            <option value="Central African CFA franc">Central African CFA franc</option>
+            <option value="Chilean peso">Chilean peso</option>
+            <option value="Chinese yuan">Chinese yuan</option>
+            <option value="Colombian peso">Colombian peso</option>
+            <option value="Comorian franc">Comorian franc</option>
+            <option value="Congolese franc">Congolese franc</option>
+            <option value="Costa Rican colón">Costa Rican colón</option>
+            <option value="Croatian kuna">Croatian kuna</option>
+            <option value="Cuban convertible peso">Cuban convertible peso</option>
+            <option value="Cuban peso">Cuban peso</option>
+            <option value="Czech koruna">Czech koruna</option>
+            <option value="Danish krone">Danish krone</option>
+            <option value="Djiboutian franc">Djiboutian franc</option>
+            <option value="Dominican peso">Dominican peso</option>
+            <option value="East Caribbean dollar">East Caribbean dollar</option>
+            <option value="Egyptian pound">Egyptian pound</option>
+            <option value="Eritrean nakfa">Eritrean nakfa</option>
+            <option value="Estonian kroon">Estonian kroon</option>
+            <option value="Ethiopian birr">Ethiopian birr</option>
+            <option value="Euro">Euro</option>
+            <option value="Falkland Islands pound">Falkland Islands pound</option>
+            <option value="Fijian dollar">Fijian dollar</option>
+            <option value="Finnish markka">Finnish markka</option>
+            <option value="French franc">French franc</option>
+            <option value="Gambian dalasi">Gambian dalasi</option>
+            <option value="Georgian lari">Georgian lari</option>
+            <option value="Ghanaian cedi">Ghanaian cedi</option>
+            <option value="Gibraltar pound">Gibraltar pound</option>
+            <option value="Guatemalan quetzal">Guatemalan quetzal</option>
+            <option value="Guernsey pound">Guernsey pound</option>
+            <option value="Guyanese dollar">Guyanese dollar</option>
+            <option value="Haitian gourde">Haitian gourde</option>
+            <option value="Honduran lempira">Honduran lempira</option>
+            <option value="Hong Kong dollar">Hong Kong dollar</option>
+            <option value="Hungarian forint">Hungarian forint</option>
+            <option value="Icelandic króna">Icelandic króna</option>
+            <option value="Indian rupee">Indian rupee</option>
+            <option value="Indonesian rupiah">Indonesian rupiah</option>
+            <option value="Iranian rial">Iranian rial</option>
+            <option value="Iraqi dinar">Iraqi dinar</option>
+            <option value="Israeli new shekel">Israeli new shekel</option>
+            <option value="Italian lira">Italian lira</option>
+            <option value="Jamaican dollar">Jamaican dollar</option>
+            <option value="Japanese yen">Japanese yen</option>
+            <option value="Jersey pound">Jersey pound</option>
+            <option value="Jordanian dinar">Jordanian dinar</option>
+            <option value="Kazakhstani tenge">Kazakhstani tenge</option>
+            <option value="Kenyan shilling">Kenyan shilling</option>
+            <option value="Kuwaiti dinar">Kuwaiti dinar</option>
+            <option value="Kyrgyzstani som">Kyrgyzstani som</option>
+            <option value="Laotian kip">Laotian kip</option>
+            <option value="Latvian lats">Latvian lats</option>
+            <option value="Lebanese pound">Lebanese pound</option>
+            <option value="Lesotho loti">Lesotho loti</option>
+            <option value="Liberian dollar">Liberian dollar</option>
+            <option value="Libyan dinar">Libyan dinar</option>
+            <option value="Lithuanian litas">Lithuanian litas</option>
+            <option value="Macanese pataca">Macanese pataca</option>
+            <option value="Macedonian denar">Macedonian denar</option>
+            <option value="Malagasy ariary">Malagasy ariary</option>
+            <option value="Malawian kwacha">Malawian kwacha</option>
+            <option value="Malaysian ringgit">Malaysian ringgit</option>
+            <option value="Maldivian rufiyaa">Maldivian rufiyaa</option>
+            <option value="Maltese lira">Maltese lira</option>
+            <option value="Mauritanian ouguiya">Mauritanian ouguiya</option>
+            <option value="Mauritian rupee">Mauritian rupee</option>
+            <option value="Mexican peso">Mexican peso</option>
+            <option value="Moldovan leu">Moldovan leu</option>
+            <option value="Mongolian tögrög">Mongolian tögrög</option>
+            <option value="Moroccan dirham">Moroccan dirham</option>
+            <option value="Mozambican metical">Mozambican metical</option>
+            <option value="Myanma kyat">Myanma kyat</option>
+            <option value="Namibian dollar">Namibian dollar</option>
+            <option value="Nepalese rupee">Nepalese rupee</option>
+            <option value="Netherlands Antillean guilder">Netherlands Antillean guilder</option>
+            <option value="New Taiwan dollar">New Taiwan dollar</option>
+            <option value="New Zealand dollar">New Zealand dollar</option>
+            <option value="Nicaraguan córdoba">Nicaraguan córdoba</option>
+            <option value="Nigerian naira">Nigerian naira</option>
+            <option value="North Korean won">North Korean won</option>
+            <option value="Norwegian krone">Norwegian krone</option>
+            <option value="Omani rial">Omani rial</option>
+            <option value="Pakistani rupee">Pakistani rupee</option>
+            <option value="Panamanian balboa">Panamanian balboa</option>
+            <option value="Papua New Guinean kina">Papua New Guinean kina</option>
+            <option value="Paraguayan guaraní">Paraguayan guaraní</option>
+            <option value="Peruvian sol">Peruvian sol</option>
+            <option value="Philippine peso">Philippine peso</option>
+            <option value="Polish złoty">Polish złoty</option>
+            <option value="Qatari riyal">Qatari riyal</option>
+            <option value="Romanian leu">Romanian leu</option>
+            <option value="Russian ruble">Russian ruble</option>
+            <option value="Rwandan franc">Rwandan franc</option>
+            <option value="Saint Helena pound">Saint Helena pound</option>
+            <option value="Samoan tālā">Samoan tālā</option>
+            <option value="São Tomé and Príncipe dobra">São Tomé and Príncipe dobra</option>
+            <option value="Saudi riyal">Saudi riyal</option>
+            <option value="Serbian dinar">Serbian dinar</option>
+            <option value="Seychellois rupee">Seychellois rupee</option>
+            <option value="Sierra Leonean leone">Sierra Leonean leone</option>
+            <option value="Singapore dollar">Singapore dollar</option>
+            <option value="Solomon Islands dollar">Solomon Islands dollar</option>
+            <option value="Somali shilling">Somali shilling</option>
+            <option value="South African rand">South African rand</option>
+            <option value="South Korean won">South Korean won</option>
+            <option value="South Sudanese pound">South Sudanese pound</option>
+            <option value="Sri Lankan rupee">Sri Lankan rupee</option>
+            <option value="Sudanese pound">Sudanese pound</option>
+            <option value="Surinamese dollar">Surinamese dollar</option>
+            <option value="Swazi lilangeni">Swazi lilangeni</option>
+            <option value="Swedish krona">Swedish krona</option>
+            <option value="Swiss franc">Swiss franc</option>
+            <option value="Syrian pound">Syrian pound</option>
+            <option value="Tajikistani somoni">Tajikistani somoni</option>
+            <option value="Tanzanian shilling">Tanzanian shilling</option>
+            <option value="Thai baht">Thai baht</option>
+            <option value="Tongan paʻanga">Tongan paʻanga</option>
+            <option value="Trinidad and Tobago dollar">Trinidad and Tobago dollar</option>
+            <option value="Tunisian dinar">Tunisian dinar</option>
+            <option value="Turkish lira">Turkish lira</option>
+            <option value="Turkmenistan manat">Turkmenistan manat</option>
+            <option value="Ugandan shilling">Ugandan shilling</option>
+            <option value="Ukrainian hryvnia">Ukrainian hryvnia</option>
+            <option value="United Arab Emirates dirham">United Arab Emirates dirham</option>
+            <option value="United States dollar">United States dollar</option>
+            <option value="Uruguayan peso">Uruguayan peso</option>
+            <option value="Uzbekistani soʻm">Uzbekistani soʻm</option>
+            <option value="Vanuatu vatu">Vanuatu vatu</option>
+            <option value="Vatican lira">Vatican lira</option>
+            <option value="Venezuelan bolívar soberano">Venezuelan bolívar soberano</option>
+            <option value="Vietnamese đồng">Vietnamese đồng</option>
+            <option value="Yemeni rial">Yemeni rial</option>
+            <option value="Zambian kwacha">Zambian kwacha</option>
+            <option value="Zimbabwean dollar">Zimbabwean dollar</option>
+        </select>
         <div id="spinner-container">
             <div class="spinner-border text-primary" role="status">
                 <span class="visually-hidden">Obteniendo datos de RestCountries...</span>
