--- a/source/countries/templates/countries/base.html
+++ b/source/countries/templates/countries/base.html
@@ -28,7 +28,7 @@
                         <a class="nav-link" href="/order/order">Order by</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/comp_countries">Compare Countries</a>
+                        <a class="nav-link" href="/compare/compare_search">Compare Countries</a>
                     </li>
                     {% if user.is_authenticated %}
                     <li class="nav-item">
