--- a/source/compare/templates/compare/comp_countries.html
+++ b/source/compare/templates/compare/comp_countries.html
@@ -1,5 +1,5 @@
 {% extends 'countries/base.html' %}
-{% block title %}COMPARACIÓN DE PAÍSES {% endblock %}
+{% block title %}Comparación de países{% endblock %}
 {% load static %}
 {% block content %}
 
