--- a/source/currencies/templates/currencies/currency.html
+++ b/source/currencies/templates/currencies/currency.html
@@ -1,5 +1,5 @@
 {% extends 'countries/base.html' %}
-{% block title %}PAÍSES POR MONEDA{% endblock %}
+{% block title %}Países por divisa{% endblock %}
 {% load static %}
 {% block content %}
 <style>
