--- a/source/languages/templates/languages/b_idioma.html
+++ b/source/languages/templates/languages/b_idioma.html
@@ -1,5 +1,5 @@
 {% extends 'countries/base.html' %}
-{% block title %}SEARCH BY LANGUAGE{% endblock %}
+{% block title %}Search by language{% endblock %}
 {% block content %}
 <style>
     #spinner-container {
