--- a/source/order/templates/order/area.html
+++ b/source/order/templates/order/area.html
@@ -1,5 +1,5 @@
 {% extends 'countries/base.html' %}
-{% block title %}PAÍSES POR ÁREA{% endblock %}
+{% block title %}Países por área{% endblock %}
 {% block content %}
 <style>
     body {
