--- a/source/order/templates/order/population.html
+++ b/source/order/templates/order/population.html
@@ -1,5 +1,5 @@
 {% extends 'countries/base.html' %}
-{% block title %}PAÍSES POR POBLACIÓN{% endblock %}
+{% block title %}Países por población{% endblock %}
 {% block content %}
 <style>
     body {
