--- a/source/countries/templates/countries/base.html
+++ b/source/countries/templates/countries/base.html
@@ -22,7 +22,7 @@
                         <a class="nav-link" href="/languages/search">Search by language</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/currency">Search by currency</a>
+                        <a class="nav-link" href="/currencies/search">Search by currency</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/order/order">Order by</a>
