--- a/source/countries/templates/countries/home.html
+++ b/source/countries/templates/countries/home.html
@@ -27,7 +27,6 @@
 
     h2 {
         text-align: center;
-        margin-bottom: 2em;
         font-size: 1.5em;
         color: #555;
     }
@@ -43,6 +42,7 @@
     #search-box {
         background-color: #fff;
         padding: 30px;
+        margin-top: 2em;
         border-radius: 8px;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         width: 100%;
@@ -98,8 +98,8 @@
 <body>
     <div id="search-container">
         <h1>Bienvenido a Culturalízate</h1>
-        <h2>Puede empezar a buscar países introduciendo su nombre en inglés.
-            Por ejemplo: Spain, Portugal</h2>
+        <h2>Puede empezar a buscar países introduciendo su nombre en inglés o español.</h2>
+        <h2>Por ejemplo: Spain / España, Portugal, Germany...</h2>
         <div id="search-box">
             <form id="search-form" method="post">
                 {% csrf_token %}
