--- a/source/currencies/templates/currencies/b_currency.html
+++ b/source/currencies/templates/currencies/b_currency.html
@@ -1,5 +1,5 @@
 {% extends 'countries/base.html' %}
-{% block title %}Búsqueda por Moneda{% endblock %}
+{% block title %}Búsqueda por Divisa{% endblock %}
 {% block content %}
 <style>
     #spinner-container {
@@ -27,7 +27,6 @@
 
     h2 {
         text-align: center;
-        margin-bottom: 2em;
         font-size: 1.5em;
         color: #555;
     }
@@ -43,6 +42,7 @@
     #search-box {
         background-color: #fff;
         padding: 30px;
+        margin-top: 2em;
         border-radius: 8px;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         width: 100%;
@@ -98,8 +98,8 @@
 <body>
     <div id="search-container">
         <h1>Busque países por divisa</h1>
-        <h2>Introduzca una divisa para obtener todos los países en los que se utiliza.
-        Por ejemplo: euro, dollar, pound</h2>
+        <h2>Introduzca una divisa para obtener todos los países en los que se utiliza.</h2>
+        <h2>En el desplegable de abajo puede ver todas las opciones posibles</h2>
         <div id="search-box">
             <form id="search-form" method="post">
                 {% csrf_token %}
