--- a/source/upload/templates/upload.html
+++ b/source/upload/templates/upload.html
@@ -1,5 +1,5 @@
 {% extends 'countries/base.html' %}
-{% block title %}FOTO SUBIDA{% endblock %}
+{% block title %}Foto subida{% endblock %}
 {% block content %}
 <div style="text-align: center; margin-top: 50px;">
     <h2>LAS FOTOS SE HA SUBIDO CORRECTAMENTE A https://www.flickr.com/photos/200557176@N08/</h2>
