Aplicación para favoritos creada

--- a/source/countries/templates/countries/base.html
+++ b/source/countries/templates/countries/base.html
@@ -32,10 +32,10 @@
                     </li>
                     {% if user.is_authenticated %}
                     <li class="nav-item">
-                        <a class="nav-link" href="/add_to_favorites">Añadir favorito</a>
+                        <a class="nav-link" href="/favorites/add_to_favorites">Añadir favorito</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/show_favorites">Mis Favoritos</a>
+                        <a class="nav-link" href="/favorites/show_favorites">Mis Favoritos</a>
                     </li>
                     {% endif %}
                 </ul>
